// {C} Copyright 2018 Pensando Systems Inc. All rights reserved.

syntax = "proto3";
package tpaprotos;
import "github.com/pensando/sw/api/meta.proto";
import "github.com/pensando/sw/venice/ctrler/tpm/rpcserver/protos/tpm.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message FlowExportPolicyObj {
    api.TypeMeta 		T = 1 [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = ",inline"];
    api.ObjectMeta 		O = 2 [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = "meta,omitempty"];
    tpmprotos.FlowExportPolicy P = 3 [(gogoproto.jsontag) = "flow-export-policy,inline"];
    repeated FlowMonitorObj FlowMonObj = 4 [(gogoproto.jsontag) = "flow-monitor"];
}

message FlowMonitorObj {
    uint64 Key = 1 [(gogoproto.jsontag) = "key,omitempty"];
    repeated uint64 CollectorKey = 2 [(gogoproto.jsontag) = "collector,omitempty"];
}

